# trezoa-sdk

./: .mergify.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  RELEASE.md  SECURITY.md  UPDATE_CONFIRMATION.md  build.rs  fetch-tpl.sh  run.sh
.buildkite/scripts/: build-bench.sh  build-stable.sh
.github/: README.md
.github/ISSUE_TEMPLATE/: 2-feature-gate.yml
.github/scripts/: downstream-project-tpl-common.sh
.github/workflows/: close-new-issues.yml  close-new-pull-requests.yml  docs.yml  downstream-project-anchor.yml  downstream-project-tpl-nightly.yml  downstream-project-tpl.yml  manage-stale-issues-and-prs.yml  release-artifacts-auto.yml  release-artifacts.yml
account-decoder/src/: parse_account_data.rs  parse_token.rs
accounts-bench/src/: main.rs
accounts-cluster-bench/src/: main.rs
accounts-db/: Cargo.toml
accounts-db/benches/: accounts.rs  bench_hashing.rs
accounts-db/src/: accounts.rs  accounts_db.rs  accounts_hash.rs  accounts_index.rs  accounts_index_storage.rs  accounts_partition.rs  ancient_append_vecs.rs  append_vec.rs  bucket_map_holder.rs  cache_hash_data.rs  hardened_unpack.rs  inline_tpl_token.rs  inline_tpl_token_2022.rs  lib.rs  shared_buffer_reader.rs  stake_rewards.rs  tiered_storage.rs  (+2 more)
banks-server/: Cargo.toml
bench-tps/: Cargo.toml
cd/: README.md
ci/: README.md  buildkite-pipeline-in-disk.sh  buildkite-pipeline.sh  buildkite-secondary.yml  buildkite-trezoa-private.sh  channel-info.sh  dependabot-pr.sh  do-audit.sh  publish-installer.sh  publish-tarball.sh  rust-version.sh  test-coverage.sh  upload-ci-artifact.sh  upload-github-release-asset.sh
cli/: Cargo.toml
connection-cache/: Cargo.toml
core/: Cargo.toml
docker-trezoa/: README.md  build.sh
docs/: README.md  build.sh  docusaurus.config.js  publish-docs.sh
dos/: Cargo.toml
frozen-abi/: Cargo.toml
geyser-plugin-interface/: README.md
geyser-plugin-manager/: Cargo.toml
gossip/: Cargo.toml
install/: trezoa-install-init.sh
ledger/: Cargo.toml
local-cluster/: Cargo.toml
multinode-demo/: bootstrap-validator.sh  common.sh  setup.sh
net/: net.sh
program-runtime/: Cargo.toml
program-test/: Cargo.toml
quic-client/: Cargo.toml
rpc/: Cargo.toml
runtime/: Cargo.toml
scripts/: build-downstream-anchor-projects.sh  cargo-install-all.sh  check-clippy.sh  check-fmt.sh  patch-crates.sh  patch-tpl-crates-for-anchor.sh  reserve-cratesio-package-name.sh  run.sh  test-bench.sh  test-coverage.sh  test-stable.sh  tpl-token-cli-version.sh  trezoa-install-deploy.sh
sdk/: README.md
sdk/cargo-build-sbf/tests/crates/fail/: Cargo.toml
src/: ed25519_instruction.rs  feature_set.rs  fee.rs  lib.rs  log.rs  secp256k1_instruction.rs
streamer/: Cargo.toml
svm/: Cargo.toml
svm/src/: account_loader.rs  account_overrides.rs  account_rent_state.rs  lib.rs  transaction_account_state_info.rs  transaction_processor.rs  transaction_results.rs
svm/tests/: integration_test.rs  mock_bank.rs
system-test/: automation_utils.sh  testnet-automation.sh
turbine/: Cargo.toml
unified-scheduler-logic/: Cargo.toml
unified-scheduler-pool/: Cargo.toml
validator/: Cargo.toml
wen-restart/: Cargo.toml
wen-restart/proto/: wen_restart.proto
wen-restart/src/: last_voted_fork_slots_aggregate.rs  lib.rs  wen_restart.rs
zk-token-sdk/: Cargo.toml
(+492 files in other folders)
