[package]
name = "trezoa-svm"
description = "Trezoa SVM"
documentation = "https://docs.rs/trezoa-svm"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
itertools = { workspace = true }
log = { workspace = true }
percentage = { workspace = true }
trezoa-bpf-loader-program = { workspace = true }
trezoa-frozen-abi = { workspace = true }
trezoa-frozen-abi-macro = { workspace = true }
trezoa-loader-v4-program = { workspace = true }
trezoa-measure = { workspace = true }
trezoa-metrics = { workspace = true }
trezoa-program-runtime = { workspace = true }
trezoa-sdk = { workspace = true }
trezoa-system-program = { workspace = true }

[lib]
crate-type = ["lib"]
name = "trezoa_svm"

[dev-dependencies]
bincode = { workspace = true }
trezoa-logger = { workspace = true }
trezoa-sdk = { workspace = true, features = ["dev-context-only-utils"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = { workspace = true }

[features]
dev-context-only-utils = []
