[package]
name = "trezoa-wen-restart"
description = "Automatic repair and restart protocol"
documentation = "https://github.com/trezoa-foundation/trezoa-improvement-documents/pull/46"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
trezoa-gossip = { workspace = true }
trezoa-ledger = { workspace = true }
trezoa-logger = { workspace = true }
trezoa-program = { workspace = true }
trezoa-runtime = { workspace = true }
trezoa-sdk = { workspace = true }
trezoa-vote-program = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
rand = { workspace = true }
serial_test = { workspace = true }
trezoa-accounts-db = { workspace = true }
trezoa-entry = { workspace = true }
trezoa-runtime = { workspace = true, features = ["dev-context-only-utils"] }
trezoa-streamer = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
rustc_version = { workspace = true }

# windows users should install the protobuf compiler manually and set the PROTOC
# envar to point to the installed binary
[target."cfg(not(windows))".build-dependencies]
protobuf-src = { workspace = true }

[lib]
name = "trezoa_wen_restart"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
