[package]
name = "fail"
version = "2.0.0"
description = "Trezoa SBF test program written in Rust"
authors = ["Trezoa-team Maintainers <maintainers@trezoa.com>"]
repository = "https://github.com/trezoa-team/trezoa"
license = "Apache-2.0"
homepage = "https://trezoa.com/"
edition = "2021"
publish = false

[dependencies]
trezoa-program = { path = "../../../../program", version = "=2.0.0" }

[lib]
crate-type = ["cdylib"]

[workspace]
